force-app/main/default/objects/Disc_Type_List__c/Disc_Type_List__c.object-meta.xml
<CustomObject>
    <label>RD Disc Type</label>
    <nameField>
        <displayFormat>DT-{0000}</displayFormat>
        <label>Disc Type List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RD Disc Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>