force-app/main/default/objects/Disc_Type_List__c/fields/BidirFlag__c.field-meta.xml
<CustomField>
    <fullName>BidirFlag__c</fullName>
    <label>BidirFlag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>