force-app/main/default/objects/Disc_Type_List__c/fields/BurstTolMethod__c.field-meta.xml
<CustomField>
    <fullName>BurstTolMethod__c</fullName>
    <label>BurstTolMethod</label>
    <length>80</length>
    <type>Text</type>
</CustomField>