force-app/main/default/objects/Disc_Type_List__c/fields/Composite__c.field-meta.xml
<CustomField>
    <fullName>Composite__c</fullName>
    <label>Composite</label>
    <length>80</length>
    <type>Text</type>
</CustomField>