force-app/main/default/objects/Disc_Type_List__c/fields/DefMfgRngType__c.field-meta.xml
<CustomField>
    <fullName>DefMfgRngType__c</fullName>
    <label>DefMfgRngType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>