force-app/main/default/objects/Disc_Type_List__c/fields/DerateType__c.field-meta.xml
<CustomField>
    <fullName>DerateType__c</fullName>
    <label>DerateType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>