force-app/main/default/objects/Disc_Type_List__c/fields/Eleven_Sixteen__c.field-meta.xml
<CustomField>
    <fullName>Eleven_Sixteen__c</fullName>
    <label>Eleven_Sixteen</label>
    <length>80</length>
    <type>Text</type>
</CustomField>