force-app/main/default/objects/Disc_Type_List__c/fields/GoodForVac__c.field-meta.xml
<CustomField>
    <fullName>GoodForVac__c</fullName>
    <label>GoodForVac</label>
    <length>80</length>
    <type>Text</type>
</CustomField>