force-app/main/default/objects/Disc_Type_List__c/fields/LiquidTestReqd__c.field-meta.xml
<CustomField>
    <fullName>LiquidTestReqd__c</fullName>
    <label>LiquidTestReqd</label>
    <length>80</length>
    <type>Text</type>
</CustomField>