force-app/main/default/objects/Disc_Type_List__c/fields/ProductDescr2__c.field-meta.xml
<CustomField>
    <fullName>ProductDescr2__c</fullName>
    <label>ProductDescr2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>