force-app/main/default/objects/Disc_Type_List__c/fields/ProductDescr4__c.field-meta.xml
<CustomField>
    <fullName>ProductDescr4__c</fullName>
    <label>ProductDescr4</label>
    <length>80</length>
    <type>Text</type>
</CustomField>