force-app/main/default/objects/Disc_Type_List__c/fields/ProductLevel__c.field-meta.xml
<CustomField>
    <fullName>ProductLevel__c</fullName>
    <label>ProductLevel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>