force-app/main/default/objects/Disc_Type_List__c/fields/PTC__c.field-meta.xml
<CustomField>
    <fullName>PTC__c</fullName>
    <label>PTC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>