force-app/main/default/objects/Disc_Type_List__c/fields/RangeComparison__c.field-meta.xml
<CustomField>
    <fullName>RangeComparison__c</fullName>
    <label>RangeComparison</label>
    <length>80</length>
    <type>Text</type>
</CustomField>