force-app/main/default/objects/Disc_Type_List__c/fields/ShopRngMinMax__c.field-meta.xml
<CustomField>
    <fullName>ShopRngMinMax__c</fullName>
    <label>ShopRngMinMax</label>
    <length>80</length>
    <type>Text</type>
</CustomField>