force-app/main/default/objects/Disc_Type_List__c/fields/StandardDisc__c.field-meta.xml
<CustomField>
    <fullName>StandardDisc__c</fullName>
    <label>StandardDisc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>