force-app/main/default/objects/Disc_Type_List__c/fields/TempTestReqd__c.field-meta.xml
<CustomField>
    <fullName>TempTestReqd__c</fullName>
    <label>TempTestReqd</label>
    <length>80</length>
    <type>Text</type>
</CustomField>