force-app/main/default/objects/Disc_Type_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BidirFlag__c</columns>
    <columns>PTC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>